src/test/ui/reachable/expr_method.stderr
error: unreachable expression
  --> $DIR/expr_method.rs:16:21
   |
LL |     Foo.foo(return, 22);
   |             ------  ^^ unreachable expression
   |             |
   |             diverging due to this
   |
note: lint level defined here
  --> $DIR/expr_method.rs:5:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable call
  --> $DIR/expr_method.rs:21:9
   |
LL |     Foo.bar(return);
   |         ^^^ ------ diverging due to this
   |         |
   |         unreachable call

error: aborting due to 2 previous errors

